simplify build, back to Java 8